# ljmd

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cmake.sh  gtest.sh
.github/workflows/: cmake.yml  mpi_cmake.yml  serial_cmake.yml
MPI_install_script/: MPI_install.sh
include/: .#common.h  common.h  io.h  mpi_header.h  physics.h
include/mpi_headers/: mpi_comm.h  mpi_io.h  mpi_physics.h  mpi_test_env.h  mpi_utils.h
reports/: report_mpi.md  report_omp.md
src/: ljmd.c
src/common/: CMakeLists.txt  common.c  test_common.cpp
src/io/: CMakeLists.txt  input.c  output.c  test_input.cpp  test_output.cpp
src/mpi/: CMakeLists.txt  mpi_utils.c  test_mpi.cpp  test_mpi_basic.cpp
src/mpi/mpi_comm/: CMakeLists.txt  mpi_comm.c  test_mpi_comm.cpp
src/mpi/mpi_io/: CMakeLists.txt  mpi_io.c  test_mpi_io.cpp
src/mpi/mpi_physics/: CMakeLists.txt  mpi_ekin.c  mpi_force.c  mpi_force_split.c  mpi_force_splitt.c  mpi_integration.c
src/mpi/mpi_utils/: CMakeLists.txt  mpi_utils.c  test_mpi_utils.cpp
src/physics/: CMakeLists.txt  cell.c  ekin.c  force.c  integration.c  test_cell.cpp  test_ekin.cpp  test_force.cpp  test_integration.cpp  test_mpi_force.cpp  test_utils.cpp  utils.c
tests/: CMakeLists.txt  GTest.cmake  compare.sh
tests/input_files/: argon_108.inp  argon_108.sh
